Tweaks to step handling in Submission.Builder